--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Activity-1/Index.html" target="_blank">Activity-1</a></li>
                 <li><a href="Activity-2/index.html" target="_blank">Activity-2</a></li>
+                <li><a href="Activity-3/index.html" target="_blank">Activity-3</a></li>
             </ul>
     </body>
 </html>
