--- a/Index.html
+++ b/Index.html
@@ -3,12 +3,12 @@
         <title>Homepage</title>
     </head>
     <body>
-        <h1>Table of Contents</h1>
-            <ul style="list-style-type: square;">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="Activity-1/Index.html" target="_blank">Activity-1</a></li>
-                <li><a href="Activity-2/index.html" target="_blank">Activity-2</a></li>
-                <li><a href="Activity-3/index.html" target="_blank">Activity-3</a></li>
-            </ul>
+        <h1>Table of contents</h1>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="Activity-1/Index.html" target="_blank">Activity-1</a></li>
+            <li><a href="Activity-2/index.html" target="_blank">Activity-2</a></li>
+            <li><a href="Activity-3/index.html" target="_blank">Activity-3</a></li>
+        </ul>
     </body>
 </html>
