--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
             <li><a href="Activity-1/Index.html" target="_blank">Activity-1</a></li>
             <li><a href="Activity-2/index.html" target="_blank">Activity-2</a></li>
             <li><a href="Activity-3/index.html" target="_blank">Activity-3</a></li>
+            <li><a href="Activity-4/index.html" target="_blank">Activity-4</a></li>
         </ul>
     </body>
 </html>
