--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <li><a href="Activity-2/index.html" target="_blank">Activity-2</a></li>
             <li><a href="Activity-3/index.html" target="_blank">Activity-3</a></li>
             <li><a href="Activity-4/index.html" target="_blank">Activity-4</a></li>
+            <li><a href="Activity-5/index.html" target="_blank">Activity-5</a></li>
         </ul>
     </body>
 </html>
