--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <li><a href="Activity-3/index.html" target="_blank">Activity-3</a></li>
             <li><a href="Activity-4/index.html" target="_blank">Activity-4</a></li>
             <li><a href="Activity-5/index.html" target="_blank">Activity-5</a></li>
+            <li><a href="Activity-6/index.html" target="_blank">Activity-6</a></li>
         </ul>
     </body>
 </html>
