--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <li><a href="Activity-4/index.html" target="_blank">Activity-4</a></li>
             <li><a href="Activity-5/index.html" target="_blank">Activity-5</a></li>
             <li><a href="Activity-6/index.html" target="_blank">Activity-6</a></li>
+            <li><a href="Activity-7/index.html" target="_blank">Activity-7</a></li>
         </ul>
     </body>
 </html>
