--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li><a href="Activity-5/index.html" target="_blank">Activity-5</a></li>
             <li><a href="Activity-6/index.html" target="_blank">Activity-6</a></li>
             <li><a href="Activity-7/index.html" target="_blank">Activity-7</a></li>
+            <li><a href="Activity-8/index.html" target="_blank">Activity-8</a></li>
         </ul>
     </body>
 </html>
