--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li><a href="Activity-6/index.html" target="_blank">Activity-6</a></li>
             <li><a href="Activity-7/index.html" target="_blank">Activity-7</a></li>
             <li><a href="Activity-8/index.html" target="_blank">Activity-8</a></li>
+            <li><a href="Activity-9/index.html" target="_blank">Activity-9</a></li>
         </ul>
     </body>
 </html>
